--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,11 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+.product-cards-container {
+    display: flex;
+    justify-content: space-around; 
+    flex-wrap: wrap; 
+    gap: 20px; 
+    margin-top: 20px;
+  }
+  
