--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -2,37 +2,47 @@
     General Styles used on every website (Don't Repeat Yourself)
 */
 
-.icon{
-    font-size: 2rem;
-    margin: 5px;
+.icon {
+  font-size: 2rem;
+  margin: 5px;
 }
 
 .carouselImg {
-    height: 350px;
-    object-fit: cover;
+  height: 350px;
+  object-fit: cover;
 }
 
-.register-form{
-    border-radius: 2%;
-    width: 50%;
-    padding: 1rem;
-}   
-
-.register-input{
-    width: 40%;
-    margin: 0 auto 20px;
-    border: 1px solid grey;
-    border-radius: 8px;
-    padding: 5px;
+.register-form {
+  border-radius: 2%;
+  width: 50%;
+  padding: 1rem;
 }
 
-.register-label{
-    font-weight:500;
-    font-size: large;
-    font-style: italic;
-    margin-top: 20px;
+.register-input {
+  width: 40%;
+  margin: 0 auto 20px;
+  border: 1px solid grey;
+  border-radius: 8px;
+  padding: 5px;
 }
 
-.asq{
-    color: red;
+.register-label {
+  font-weight: 500;
+  font-size: large;
+  font-style: italic;
+  margin-top: 20px;
+}
+
+.asq {
+  color: red;
+}
+
+.small-card {
+  width: 80px;
+  font-size: 0.8rem;
+}
+
+.small-card img {
+  height: 100px;
+  object-fit: cover;
 }
