--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -7,9 +7,14 @@
   margin: 5px;
 }
 
+a:visited {
+  text-decoration: none;
+}
+
 .footer-text {
   background-color: #191919;
   color: white;
+  font-size: larger;
 }
 
 .carouselImg {
