--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -96,3 +96,9 @@ input[type="checkbox"] {
   background-color: black !important;
   border-color: black !important;
 }
+
+.product-carousel {
+  background-size: cover;
+  background-position: center center;
+}
+
