--- a/src/front/styles/cards.css
+++ b/src/front/styles/cards.css
@@ -1,18 +1,64 @@
 .product-card {
-  text-align: center; 
+  text-align: center;
 }
 
 .product-card img {
-  height: 300px; 
-  object-fit: cover; 
+  height: 250px; /* Antes: 300px */
+  object-fit: cover;
 }
 
 .product-card .card-title {
-  font-size: 1.2rem;
-  font-weight: bold; 
+  font-size: 1rem; /* Antes: 1.2rem */
+  font-weight: bold;
 }
 
 .product-card .card-text {
-  font-size: 1rem; 
-  color: #333; 
+  font-size: 0.9rem; /* Antes: 1rem */
+  color: #333;
+}
+
+
+@media (max-width: 768px) {
+
+  body {
+    font-size: 13px; 
+  }
+
+  .navbar {
+    padding: 0.3rem 0.8rem;
+  }
+
+  .imgNavbar {
+    width: 60px; 
+  }
+
+  .formNavbar .form-control {
+    width: 150px;
+    font-size: 0.8rem;
+  }
+
+  .btn {
+    font-size: 0.8rem;
+    padding: 0.2rem 0.6rem;
+  }
+
+  .photoAvatarLogin {
+    width: 30px;
+    height: 30px;
+  }
+
+  .fas {
+    font-size: 1rem;
+  }
+
+  .button-NavBar {
+    font-size: 0.8rem;
+    padding: 0.4rem 0.6rem;
+  }
+
+  .carouselImg {
+    height: 250px;
+  }
+
+
 }
